# rl_rec_evaluation

./: .gitignore  README.md  pyproject.toml
rl_rec_evaluation/: get_dataset.py  inference.py  metrics.py  preprocessing.py
rl_rec_evaluation/models/: base.py
rl_rec_evaluation/models/dt4rec/: __init__.py  fqe_utils.py  gpt1.py  trainer.py
rl_rec_evaluation/training/: train.py
rl_rec_evaluation/utils/: __init__.py  utils.py  utils_sasrec.py
