[tool.poetry]
name = "rl-rec-evaluation"
version = "0.1.0"
description = ""
authors = ["toobrainless <toobrainless@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.1"
numpy = "2.0.0"
pandas = "^2.2.3"
click = "^8.1.8"
tqdm = "^4.67.1"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
rs-datasets = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
